<resources>
    <string name="app_name">To-Do List</string>
    <string-array name="categories_array">
        <item>Work</item>
        <item>Personal</item>
        <item>Shopping</item>
        <!-- Add more categories as needed -->
    </string-array>

    <string-array name="priorities_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
<string name="search">Search</string>
<string name="sort_by_priority">Sort by priority</string>
<string name="sort_by_due">Sort by due date</string>
<string name="filter_today">Filter: today</string>
<string name="filter_all">Filter: all</string>
<string name="reports">Reports</string>
<string name="empty_state_title">No tasks yet</string>
<string name="empty_state_hint">Add your first task using the + button</string>
<string name="undo">UNDO</string>
<string name="deleted">Task deleted</string>
<string name="task_deleted_message">Task deleted</string>
<string name="task_completed_message">Task completed</string>
<string name="task_date_label">Date: %1$s</string>
<string name="task_time_label">Time: %1$s</string>
<string name="task_category_label">Category: %1$s</string>
<string name="task_priority_label">Priority: %1$s</string>
<string name="task_notes_label">Note: %1$s</string>
<string name="task_added_message">Task added successfully</string>
<string name="task_updated_message">Task updated</string>
<string name="error_add_task">Failed to add task</string>
<string name="error_update_task">Failed to update task</string>
<string name="error_empty_task">Task name cannot be empty</string>
<string name="task_label_with_name">Task: %1$s</string>
<string name="notifications_channel_name">Task Reminders</string>
<string name="notifications_channel_desc">Reminders for due tasks</string>
<string name="pref_sound_title">Button sounds</string>
<string name="pref_sound_summary">Play click sound on button press</string>

    <string name="pref_theme_title">App theme color</string>
    <string name="pref_theme_summary">Pick your favorite accent color</string>
    <string-array name="theme_names">
        <item>Blue</item><item>Green</item><item>Purple</item>
    </string-array>
    <string-array name="theme_values">
        <item>blue</item><item>green</item><item>purple</item>
    </string-array>
    <string name="action_settings">Settings</string>
</resources>