<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/action_sort_priority"
        android:title="@string/sort_by_priority"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_due"
        android:title="@string/sort_by_due"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_today"
        android:title="@string/filter_today"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_all"
        android:title="@string/filter_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reports"
        android:title="@string/reports"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
